Updated external js/css to use cdn sources removed semi-transparent overlay from header Changed PM to pm for readability Added text shadow to hero for mobile contrast Fixed errors caused by upgrading bootstrap to 4.0.0

--- a/src/App.css
+++ b/src/App.css
@@ -122,16 +122,13 @@ textarea.form-control {
 	z-index: 1;
 }
 
-.section-before:before,
-.video-content:before,
-.slider-two .carousel-item:before{
+.section-before:before {
 	position: absolute;
 	content: "";
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0, 0, 0, 0.5);
 }
 
 .section-title {
