--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -32,7 +32,9 @@
 
 .banner-info p {
     animation-delay: 0.65s;
-    -webkit-animation-delay: 0.65s;	
+	-webkit-animation-delay: 0.65s;	
+	    text-shadow: 1px 1px 2px #f26522;
+
 }
 
 .banner-info .buttons {
@@ -89,14 +91,14 @@
 @media (max-width: 767px) {
 	
 	.banner-info {
-		font-size: 20px;
-		line-height: 24px;
+		font-size: 1.5em;
+		line-height: 1em;
 	}
 	.banner-info h1 {
-		font-size: 26px;
+		font-size: 2em;
 	}
 	.banner-info h2 {
-		font-size: 46px;
+		font-size: 2.2em;
     }
 }
 
