--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -25,7 +25,7 @@
 	border: solid 1px #f26522;
 }
 
-.navbar-toggleable-md .navbar-nav .nav-link  {
+.navbar-expand-lg .navbar-nav .nav-link  {
 	color: #fff;
 	font-size: 16px;
 	line-height: 45px;
